--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-# Bootstrap
-app/bootstrap*
-
 # Symfony directories
 vendor/*
-*/logs/*
-*/cache/*
+logs/*
+cache/*
 web/uploads/*
-web/bundles/*
 
 # Configuration files
 app/config/parameters.ini
