--- a/config/databases.yml
+++ b/config/databases.yml
@@ -5,6 +5,6 @@ all:
   doctrine:
     class: sfDoctrineDatabase
     param:
-      dsn:      mysql:host=localhost;dbname=POSLoketPelangi
-      username: root
-      password: 
+      dsn:      mysql:host=localhost;dbname=loketpelangi
+      username: loketpelangi
+      password: kampungtaqwa
