--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-# Symfony directories
-symfony14/vendor/*
-symfony14/logs/*
-symfony14/cache/*
-symfony14/web/uploads/*
-
-## Configuration files
-symfony14/app/config/parameters.ini
-symfony14/app/config/parameters.yml
+loketpelangi/assets/*
+loketpelangi/protected/runtime/*
